--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -14,22 +14,21 @@ header {
   display: inline;
 }
 
-main {
-  padding: 20px;
-  overflow: auto;
-}
-
-h2,
-h3 {
-  color: #00a2c6;
-}
-
-footer {
-  padding: 20px;
-  color: white;
+nav {
   background-color: #00a2c6;
-  text-align: center;
-  font-weight: bold;
+  padding: 5px;
+  position: sticky;
+  top: 0;
+}
+
+nav ul {
+  padding-inline: 4rem;
+  display: flex;
+  gap: 2rem;
+}
+
+nav li {
+  list-style-type: none;
 }
 
 nav a {
@@ -41,6 +40,46 @@ nav a {
 
 nav a:hover {
   font-weight: bold;
+}
+
+main {
+  padding: 20px;
+  display: flex;
+  gap: 1.5rem;
+}
+
+aside {
+  flex: 1;
+}
+
+footer {
+  padding: 20px;
+  color: white;
+  background-color: #00a2c6;
+  text-align: center;
+  font-weight: bold;
+}
+
+h2,
+h3 {
+  color: #00a2c6;
+}
+
+/* Menetapkan float pada #content dan aside */
+#content {
+  flex: 5;
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 1rem 2rem;
+}
+
+/* Menerapkan Jumbotron dan Navigasi pada header */
+.jumbotron {
+  padding: 60px;
+  background-color: #00c8eb;
+  text-align: center;
+  font-size: 20px;
+  color: white;
 }
 
 /* Atribut untuk class eleme aside */
@@ -64,48 +103,25 @@ nav a:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   padding: 20px;
-  margin-top: 20px;
-}
-
-/* Menerapkan Jumbotron dan Navigasi pada header */
-.jumbotron {
-  padding: 60px;
-  background-color: #00c8eb;
-  text-align: center;
-  font-size: 20px;
-  color: white;
-}
-
-nav li {
-  display: inline;
-  list-style-type: none;
-  margin-right: 20px;
-}
-
-nav {
-  background-color: #00a2c6;
-  padding: 5px;
-  position: sticky;
-  top: 0;
-}
-
-/* Menetapkan float pada #content dan aside */
-#content {
-  float: left;
-  width: 75%;
-}
-
-aside {
-  float: right;
-  width: 25%;
-  padding-left: 20px;
 }
 
 /* Menetapkan rules pada Ukuran Layar Tertentu */
-@media screen and (max-width: 1000px) {
-  #content,
-  aside {
-    width: 100%;
-    padding: 0;
+@media screen and (max-width: 1200px) {
+  main {
+    flex-flow: column nowrap;
+  }
+
+  main aside {
+    align-self: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  nav ul {
+    justify-content: center;
+  }
+
+  main aside {
+    align-self: stretch;
   }
 }
